--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@ UX Researcher & HCI Specialist specializing in AI-driven Interaction Design and 
 
 <div class="skill-block">
 <label>Research Methods</label>
-<div style="font-size: 13px;">Usability Testing, Thematic Coding, Affinity Mapping, A/B Testing, Ethnography</div>
+<div style="font-size: 13px;">Human Factors, Usability Testing, Thematic Coding, Affinity Mapping, A/B Testing, Ethnography</div>
 </div>
 
 <div class="skill-block">
 <label>Development</label>
-<div style="font-size: 13px;">Python, Java, JavaScript, SQL, Unity, ARCore, Niantic Lightship</div>
+<div style="font-size: 13px;">HTML, CSS, Python, Java, JavaScript, SQL, Tableau, Power BI, Excel (Advanced – Pivot Tables, VLOOKUP/XLOOKUP, Power Query), Git</div>
 </div>
 
 <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid var(--line);">
